Fix 2 import buttons alignment in import modal

--- a/css/import.scss
+++ b/css/import.scss
@@ -31,6 +31,12 @@
 			text-align: center;
 		}
 
+		.import-modal__actions {
+			> button {
+				display: inline-block !important;
+			}
+		}
+
 		.import-modal-file-item {
 			display: flex;
 			padding-top: 10px;
